fix: 修复 jpa 条件拼接错误会导致业务条件覆盖掉逻辑删除租户 id， 修改 ai agent 并发过滤转移到拦截器中 修改 ai agent 上下文窗口从 130k - 80k